--- a/video_processor/templates/video_processor/user_not_found.html
+++ b/video_processor/templates/video_processor/user_not_found.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User Not Found - VaultIQ</title>
+    <title>User Not Found - AskMyVideo</title>
     <style>
         * {
             margin: 0;
@@ -154,7 +154,7 @@
             <ul>
                 <li>Check the spelling of the username</li>
                 <li>Search all public videos using the main search</li>
-                <li>Create a VaultIQ account to build your own video library</li>
+                <li>Create an AskMyVideo account to build your own video library</li>
                 <li>Ask the user to share the correct link to their videos</li>
             </ul>
         </div>
